<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/account"
            android:icon="@drawable/account"
            android:title="@string/account" />
        <item
            android:id="@+id/sign_in"
            android:icon="@drawable/signin"
            android:title="@string/signin" />
        <item
            android:id="@+id/Book_self"
            android:icon="@drawable/bookshelf"
            android:title="@string/cloud" />
        <item
            android:id="@+id/zone"
            android:icon="@drawable/listen"
            android:title="@string/zone" />

        <item
            android:id="@+id/set"
            android:icon="@drawable/setting"
            android:title="@string/set" />
    </group>


</menu>
